--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ We also offer low fees and a rich trading experience.
 
 
   </p>
-   Visit AMIS's index of popular dex entitled <a href="https://github.com/amisolution/ERC20-AMIS/wiki/Get-AMIS"> INDEX OF EDX</a>HERE. . <!--See <a href="products/">our list of products</a>.--></p>
+   Visit AMIS's index of popular dex entitled <a href="https://github.com/amisolution/index"> INDEX OF DEX</a>HERE. . <!--See <a href="products/">our list of products</a>.--></p>
 
 <h2>What can I trade on AMIS Exchange?</h2>
 <p>Coins/tokens based on Ethereum (such as ERC20 tokens) can be traded,
