--- a/index.html
+++ b/index.html
@@ -37,9 +37,35 @@ We also offer low fees and a rich trading experience.
 <p>
   Latest AMIS (AMIS) - USD Historical Price Chart
 </p>
-<img src="https://cryptohistory.org/charts/candlestick/amis-usd/24h/svg" alt="AMIS/USD 24h chart" style="vertical-align: bottom;">
+<!-- <img src="https://cryptohistory.org/charts/candlestick/amis-usd/24h/svg" alt="AMIS/USD 24h chart" style="vertical-align: bottom;"> -->
+
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_5f0e1"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/HONEYSWAP-AMISUSDC/" rel="noopener" target="_blank"><span class="blue-text">AAPL Chart</span></a> by TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+  "width": 980,
+  "height": 610,
+  "symbol": "HONEYSWAP:AMISUSDC",
+  "interval": "D",
+  "timezone": "Etc/UTC",
+  "theme": "light",
+  "style": "1",
+  "locale": "en",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "allow_symbol_change": true,
+  "container_id": "tradingview_5f0e1"
+}
+  );
+  </script>
+</div>
+<!-- TradingView Widget END -->
 <p>
-24 hours AMIS price candlesticks in USD (source CryptoCompare)
+24 hours AMIS price candlesticks in USD (source TradingView)
 </p>
 <p>
   AMIS DEX Exchange is beta live <a href="https://amisdex.github.io/amis-exchange-www/products/">first products</a>
@@ -86,6 +112,42 @@ We also offer low fees and a rich trading experience.
             <th>Cryptocompare</th>
             <th>Coingecko</th>
             <th>DexTracker</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>honeyswap</td>
+            <td>https://app.honeyswap.org/#/swap?outputCurrency=0xd51e1ddd116fff9a71c1b8feeb58113afa2b4d93&inputCurrency=0xddafbb505ad214d7b80b1f830fccc89b60fb7a83</td>
+            <td>YES</td>
+            <td>YES</td>
+            <td>YES</td>
+            <td>YES</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>baoswap</td>
+            <td>https://app.baoswap.org/#/swap?outputCurrency=0xd51e1ddd116fff9a71c1b8feeb58113afa2b4d93&inputCurrency=0xddafbb505ad214d7b80b1f830fccc89b60fb7a83</td>
+            <td>YES</td>
+            <td>YES</td>
+            <td>YES</td>
+            <td>YES</td>
+        </tr>      
+        <tr>
+            <td>1</td>
+            <td>Uniswap</td>
+            <td>https://app.uniswap.org/#/swap?outputCurrency=0x949bed886c739f1a3273629b3320db0c5024c719&inputCurrency=ETH</td>
+            <td>YES</td>
+            <td>YES</td>
+            <td>YES</td>
+            <td>YES</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>sushiswap</td>
+            <td>https://app.sushi.com/#/swap?outputCurrency=0x949bed886c739f1a3273629b3320db0c5024c719&inputCurrency=ETH</td>
+            <td>YES</td>
+            <td>YES</td>
+            <td>YES</td>
+            <td>YES</td>
         </tr>
         <tr>
             <td>1</td>
