--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ We also offer low fees and a rich trading experience.
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div id="tradingview_5f0e1"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/HONEYSWAP-AMISUSDC/" rel="noopener" target="_blank"><span class="blue-text">AAPL Chart</span></a> by TradingView</div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/HONEYSWAP-AMISUSDC/" rel="noopener" target="_blank"><span class="blue-text">AMIS-USDC Chart</span></a> by TradingView</div>
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   <script type="text/javascript">
   new TradingView.widget(
@@ -65,7 +65,7 @@ We also offer low fees and a rich trading experience.
 </div>
 <!-- TradingView Widget END -->
 <p>
-24 hours AMIS price candlesticks in USD (source TradingView)
+24 hours AMIS price candlesticks in USD (source TradingView & HoneySwap)
 </p>
 <p>
   AMIS DEX Exchange is beta live <a href="https://amisdex.github.io/amis-exchange-www/products/">first products</a>
